# xubirdr

./: .cproject  .gitignore  .project  CMakeEclipseDebug.txt  CMakeLists.txt  README.md
scripts/: ubi2xubi.sh
src/: main.c
